[TRO-1637] Factor out main function from notebook into coverage_utils

--- a/notebooks/Coverage_Checker.ipynb
+++ b/notebooks/Coverage_Checker.ipynb
@@ -24,14 +24,15 @@
     "from nmaipy.constants import AREA_CRS, API_CRS\n",
     "import nmaipy.coverage_utils\n",
     "\n",
-    "SINCE=\"2007-01-01\"\n",
+    "SINCE = \"2007-01-01\"\n",
+    "UNTIL = \"2024-01-01\"\n",
     "\n",
     "DATA_DIR = Path(\"../data\")\n",
     "COVERAGE_CHUNK_DIR = DATA_DIR / \"coverage_chunks\"\n",
     "AI_COVERAGE_CHUNK_DIR = DATA_DIR / \"ai_coverage_chunks\"\n",
     "\n",
-    "POINTS_FILE = DATA_DIR / \"points.csv\"\n",
-    "ID_COL = \"point_id\"\n",
+    "POINTS_FILE = DATA_DIR / \"2023-10-09-nearmap-backfill-centroids.csv\"\n",
+    "ID_COL = \"record_id\"\n",
     "API_KEY = os.environ[\"API_KEY\"]"
    ]
   },
@@ -53,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "df_points = pd.read_csv(POINTS_FILE, index_col = 0, parse_dates=[\"since\", \"until\"])\n",
+    "df_points = pd.read_csv(POINTS_FILE, index_col=0, parse_dates=[\"since\", \"until\"])\n",
     "df_points.since.hist()\n",
     "df_points.until.hist()\n",
     "df_points"
@@ -100,60 +101,19 @@
    },
    "outputs": [],
    "source": [
-    "CHUNK_SIZE = 10000 # For big tests, useful to save chunks of coverage calls in case of failure.\n",
-    "\n",
-    "def get_survey_resource_id(resources):\n",
-    "    \"\"\"\n",
-    "    Get the survey resource id from the resources list. This is the id that can be used with the AI Feature API to get an exact match (rather than since/until dates).\n",
-    "    \"\"\"\n",
-    "    if \"aifeatures\" in resources:\n",
-    "        return resources[\"aifeatures\"][-1][\"id\"]\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "df_coverage = None\n",
+    "CHUNK_SIZE = 10000  # For big tests, useful to save chunks of coverage calls in case of failure.\n",
     "\n",
     "Path(COVERAGE_CHUNK_DIR).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for i in tqdm(range(0, len(df_points), CHUNK_SIZE)):\n",
-    "    f = os.path.join(COVERAGE_CHUNK_DIR, f\"coverage_chunk_{i}-{i+CHUNK_SIZE}.parquet\")\n",
-    "    if not os.path.exists(f):\n",
-    "        df_point_chunk = df_points.iloc[i:i+CHUNK_SIZE,:]\n",
-    "        logging.debug(f\"Pulling chunk from API for {f}.\")\n",
-    "        # Multi-threaded pulls are ok - the API is designed to cope fine with 10-20 threads running in parallel pulling requests.\n",
-    "        c = nmaipy.coverage_utils.threaded_get_coverage_from_point_results(\n",
-    "            df_point_chunk, since_col=\"since\", until_col=\"until\", apikey=API_KEY, threads=20, coverage_type=\"standard\"\n",
-    "        )\n",
-    "        c_with_idx = []\n",
-    "        for j in range(len(c)):\n",
-    "            row_id = df_point_chunk.iloc[j].name\n",
-    "            c_tmp = c[j].copy()\n",
-    "            if len(c_tmp) > 0:\n",
-    "                c_tmp[ID_COL] = row_id\n",
-    "                c_with_idx.append(c_tmp)\n",
-    "        if len(c_with_idx) > 0:\n",
-    "            c = (pd\n",
-    "                 .concat(c_with_idx)\n",
-    "                )\n",
-    "            c[\"survey_resource_id\"] = c.resources.apply(get_survey_resource_id)\n",
-    "            c = (c\n",
-    "                 .drop(columns=[\"resources\"])\n",
-    "                 .rename(columns={\"id\": \"survey_id\"})\n",
-    "                )\n",
-    "            c.to_parquet(f)\n",
-    "        else:\n",
-    "            c = None\n",
-    "\n",
-    "    else:\n",
-    "        logging.debug(f\"Reading chunk from parquet for {f}.\")\n",
-    "        c = pd.read_parquet(f)\n",
-    "\n",
-    "    if c is not None:\n",
-    "        c = (c\n",
-    "             .loc[:,[ID_COL, \"captureDate\", \"survey_id\", \"survey_resource_id\", \"tiles\", \"aifeatures\", \"3d\"]]\n",
-    "             .set_index(ID_COL)\n",
-    "            )\n",
-    "        df_coverage = pd.concat([df_coverage, c])"
+    "df_coverage = nmaipy.coverage_utils.get_coverage_from_points(\n",
+    "    df_points,\n",
+    "    api_key=API_KEY,\n",
+    "    coverage_type=\"standard\",\n",
+    "    chunk_size=CHUNK_SIZE,\n",
+    "    threads=20,\n",
+    "    coverage_chunk_cache_dir=COVERAGE_CHUNK_DIR,\n",
+    "    id_col=ID_COL,\n",
+    ")"
    ]
   },
   {
@@ -252,8 +212,12 @@
    "outputs": [],
    "source": [
     "# Show what fraction have a valid AI result already\n",
-    "display(f\"{len(df_ai_latest) / len(df_points) * 100:0.1f}% of the originally provided points have valid AI coverage in the since-until range.\")\n",
-    "display(f\"{len(df_ai_latest) / len(df_latest) * 100:0.1f}% of the points that have at least one valid imagery survey have valid AI coverage in the since-until range.\")"
+    "display(\n",
+    "    f\"{len(df_ai_latest) / len(df_points) * 100:0.1f}% of the originally provided points have valid AI coverage in the since-until range.\"\n",
+    ")\n",
+    "display(\n",
+    "    f\"{len(df_ai_latest) / len(df_latest) * 100:0.1f}% of the points that have at least one valid imagery survey have valid AI coverage in the since-until range.\"\n",
+    ")"
    ]
   },
   {
@@ -273,7 +237,7 @@
    "outputs": [],
    "source": [
     "# Get the subset of points in \"df\" that have no coverage (i.e. don't fall in \"df_ai_latest\")\n",
-    "df_no_coverage = df.loc[~df.index.isin(df_ai_latest.index),:]\n",
+    "df_no_coverage = df.loc[~df.index.isin(df_ai_latest.index), :]\n",
     "df_no_coverage"
    ]
   },
@@ -315,8 +279,8 @@
     "    capture_date = df_no_coverage.query(\"survey_id == @most_common_survey\").captureDate.iloc[0]\n",
     "    df_surveys_to_run.append({\"survey_id\": most_common_survey, \"captureDate\": capture_date})\n",
     "    idx_covered_by_most_common_survey = df_no_coverage.query(\"survey_id == @most_common_survey\").index\n",
-    "    \n",
-    "    df_no_coverage = df_no_coverage.loc[~df_no_coverage.index.isin(idx_covered_by_most_common_survey),:]\n",
+    "\n",
+    "    df_no_coverage = df_no_coverage.loc[~df_no_coverage.index.isin(idx_covered_by_most_common_survey), :]\n",
     "df_surveys_to_run = pd.DataFrame(df_surveys_to_run).set_index(\"survey_id\")\n",
     "df_surveys_to_run"
    ]
@@ -339,12 +303,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frac_with_ai_already = len(df_ai_latest.query('aifeatures')) / len(df_latest)\n",
+    "frac_with_ai_already = len(df_ai_latest.query(\"aifeatures\")) / len(df_latest)\n",
     "frac_without_ai_after_extra_surveys = len(df_no_coverage_latest) / len(df_latest)\n",
     "simulated_num_with_coverage = len(df_latest) - len(df_no_coverage_latest)\n",
     "\n",
-    "display(f\"If an additional {SURVEY_NUMBER_BUDGET} surveys are run with AI, the AI coverage (out of possible imagery surveys) would increase from {frac_with_ai_already*100:0.1f}% to {(1-frac_without_ai_after_extra_surveys)*100:0.1f}%\")\n",
-    "display(f\"i.e. {simulated_num_with_coverage:,} points covered in total, out of the original {len(df_points):,} provided ({simulated_num_with_coverage / len(df_points)*100:0.1f}%) after running  {SURVEY_NUMBER_BUDGET} surveys.\")"
+    "display(\n",
+    "    f\"If an additional {SURVEY_NUMBER_BUDGET} surveys are run with AI, the AI coverage (out of possible imagery surveys) would increase from {frac_with_ai_already*100:0.1f}% to {(1-frac_without_ai_after_extra_surveys)*100:0.1f}%\"\n",
+    ")\n",
+    "display(\n",
+    "    f\"i.e. {simulated_num_with_coverage:,} points covered in total, out of the original {len(df_points):,} provided ({simulated_num_with_coverage / len(df_points)*100:0.1f}%) after running  {SURVEY_NUMBER_BUDGET} surveys.\"\n",
+    ")"
    ]
   },
   {
@@ -391,36 +359,15 @@
     "\n",
     "Path(AI_COVERAGE_CHUNK_DIR).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for i in tqdm(range(0, len(df_ai), CHUNK_SIZE)):\n",
-    "    f = os.path.join(AI_COVERAGE_CHUNK_DIR, f\"ai_coverage_chunk_{i}-{i+CHUNK_SIZE}.parquet\")\n",
-    "    if not os.path.exists(f):\n",
-    "        df_ai_chunk = df_ai.iloc[i:i+CHUNK_SIZE,:]\n",
-    "        logging.debug(f\"Pulling chunk from AI coverage API for {f}.\")\n",
-    "        # Multi-threaded pulls are ok - the API is designed to cope fine with 10-20 threads running in parallel pulling requests.\n",
-    "        c = nmaipy.coverage_utils.threaded_get_coverage_from_point_results(\n",
-    "            df_ai_chunk, since_col=\"captureDate\", until_col=\"captureDate\", apikey=API_KEY, threads=20, coverage_type=\"ai\",\n",
-    "        )\n",
-    "        c_with_idx = []\n",
-    "        for j in range(len(c)):\n",
-    "            row_id = df_ai_chunk.iloc[j].name\n",
-    "            c_tmp = c[j].copy()\n",
-    "            if len(c_tmp) > 0:\n",
-    "                c_tmp[ID_COL] = row_id\n",
-    "                c_with_idx.append(c_tmp)\n",
-    "        if len(c_with_idx) > 0:\n",
-    "            c = pd.concat(c_with_idx)\n",
-    "            c.to_parquet(f)\n",
-    "        else:\n",
-    "            c = None\n",
-    "\n",
-    "    else:\n",
-    "        logging.debug(f\"Reading chunk from parquet for {f}.\")\n",
-    "        c = pd.read_parquet(f)\n",
-    "\n",
-    "    if c is not None:\n",
-    "        c = c.set_index(ID_COL)\n",
-    "        df_ai_coverage = pd.concat([df_ai_coverage, c])\n",
-    "df_ai_coverage"
+    "df_coverage = nmaipy.coverage_utils.get_coverage_from_points(\n",
+    "    df_points,\n",
+    "    api_key=API_KEY,\n",
+    "    coverage_type=\"ai\",\n",
+    "    chunk_size=CHUNK_SIZE,\n",
+    "    threads=20,\n",
+    "    coverage_chunk_cache_dir=AI_COVERAGE_CHUNK_DIR,\n",
+    "    id_col=ID_COL,\n",
+    ")"
    ]
   },
   {
@@ -1027,7 +974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "lcc_arn": "arn:aws:sagemaker:ap-southeast-2:329866267174:studio-lifecycle-config/sagemaker-connect-startup"
  },
